--- a/index.html
+++ b/index.html
@@ -13,3 +13,24 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset = "UTF-8">
+        <title>First Project</title>
+    </head>
+    <body>
+        <h1>First Few Projects</h1><hr>
+        <ol>
+            <li><h2><a href ="./public/birthday.html">Birthday</a></h2></li><br>
+            <img src = "assets/images/Screenshot (4).png"
+            
+            <li> <h2>
+                    <a href = "./public/movie_rank.html">Movie</a>
+                    <img src ="assets/images/movie-ranking.png">
+                </h2>
+            </li>
+        </ol>
+    </body>
+</html>
